EliteMobs 9.1.4: - [New] Players can no longer open doors and trapdoors in elite worlds, as intended by the map design - [New] Added debug field to scripts to show a debug particle at the target location of scripts - [New] Landing location is now inherited through scripts - [New] Elite slimes no longer split when killed, fixing a number of bugs - [New] Fixed arena farming being too efficient by both tweaking rewards but also applying all limiters that exist in other elitemobs content to arenas (minimum guild rank requirements for looting from certain levels, maximum difference between player level and mob level) - [Fix] Fixed problem with reinforcement power in arena fights - [Fix] Language command now switches back to english correctly - [Fix] Teleporting directly to a dungeon via teleports page no longer risks being sent back via wormhole - [Fix] Fixed several problems that made FinalTarget script targets not behave the same way as normal targets are supposed to - [Fix] Elite silverfish can no longer enter blocks - [Fix] Fixed guild request text for bedrock-compatible menus - [Fix] Fixed all default wormhole locations - [Fix] Now using a more appropriate api version of FreeMinecraftModels
Signed-off-by: MagmaGuy <tiagoarnaut@gmail.com>