@@ -4,7 +4,9 @@ import com.magmaguy.elitemobs.config.custombosses.CustomBossesConfigFields;
 import org.bukkit.Particle;
 import org.bukkit.entity.EntityType;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public class LightningFaeConfig extends CustomBossesConfigFields {
     public LightningFaeConfig() {
@@ -15,7 +17,7 @@ public class LightningFaeConfig extends CustomBossesConfigFields {
                 "dynamic");
         setHealthMultiplier(0.3);
         setDamageMultiplier(0.3);
-        setPowers(Collections.singletonList("attack_lightning.yml"));
+        setPowers(new ArrayList<>(List.of("attack_lightning.yml")));
         setUniqueLootList(Collections.singletonList("the_feller.yml:0.3"));
         setTrails(Collections.singletonList(Particle.WITCH.toString()));
     }
