@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ElephantCharmConfig extends CustomItemsConfigFields {
@@ -12,9 +12,9 @@ public class ElephantCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.ANVIL,
                 "&bElephant Charm",
-                Arrays.asList("&aGain the power of an elephant", "&astampede, for the cost of the", "&aspeed of an elephant stampede!"));
+                new ArrayList<>(List.of("&aGain the power of an elephant", "&astampede, for the cost of the", "&aspeed of an elephant stampede!")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("INCREASE_DAMAGE,1,self,onHit", "SLOW,3,self,onHit"));
+        setPotionEffects(new ArrayList<>(List.of("INCREASE_DAMAGE,1,self,onHit", "SLOW,3,self,onHit")));
         setDropWeight("1");
     }
 }
