@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class FireflyCharmConfig extends CustomItemsConfigFields {
@@ -14,7 +14,7 @@ public class FireflyCharmConfig extends CustomItemsConfigFields {
                 "&bFirefly Charm",
                 List.of("&aLight up the night!"));
         setEnchantments(List.of("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("NIGHT_VISION,0,self,continuous", "GLOWING,0,target,onHit"));
+        setPotionEffects(new ArrayList<>(List.of("NIGHT_VISION,0,self,continuous", "GLOWING,0,target,onHit")));
         setDropWeight("1");
     }
 }
