@@ -4,12 +4,13 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class GruntsSwordConfig extends CustomItemsConfigFields {
     public GruntsSwordConfig() {
-        super("grunts_sword", true, Material.IRON_SWORD, "&fGrunt's Sword", Arrays.asList("&2Awarded to those who challenge the", "&2Wood League Arena!"));
-        setEnchantments(Arrays.asList("SHARPNESS,5", "KNOCKBACK,2", "SWEEPING_EDGE,1", "UNBREAKING,5"));
+        super("grunts_sword", true, Material.IRON_SWORD, "&fGrunt's Sword", new ArrayList<>(List.of("&2Awarded to those who challenge the", "&2Wood League Arena!")));
+        setEnchantments(new ArrayList<>(List.of("SHARPNESS,5", "KNOCKBACK,2", "SWEEPING_EDGE,1", "UNBREAKING,5")));
         setItemType(CustomItem.ItemType.UNIQUE);
         setLevel(20);
     }
