@@ -4,7 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class MeteorShowerScrollConfig extends CustomItemsConfigFields {
@@ -13,7 +13,7 @@ public class MeteorShowerScrollConfig extends CustomItemsConfigFields {
                 true,
                 Material.PAPER,
                 "&7Meteor Shower Scroll",
-                Arrays.asList("&4Call forth destruction.", "&4Single-use."));
+                new ArrayList<>(List.of("&4Call forth destruction.", "&4Single-use.")));
         setEnchantments(List.of("METEOR_SHOWER,1"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
