@@ -4,12 +4,13 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class NovicesLeggingsConfig extends CustomItemsConfigFields {
     public NovicesLeggingsConfig() {
-        super("novices_leggings", true, Material.LEATHER_LEGGINGS, "&8Novice's Leggings", Arrays.asList("&2Awarded to those who challenge the", "&2Wood League Arena!"));
-        setEnchantments(Arrays.asList("PROTECTION,5", "UNBREAKING,5"));
+        super("novices_leggings", true, Material.LEATHER_LEGGINGS, "&8Novice's Leggings", new ArrayList<>(List.of("&2Awarded to those who challenge the", "&2Wood League Arena!")));
+        setEnchantments(new ArrayList<>(List.of("PROTECTION,5", "UNBREAKING,5")));
         setItemType(CustomItem.ItemType.UNIQUE);
         setLevel(10);
     }
