@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class SlowpokeCharmConfig extends CustomItemsConfigFields {
@@ -12,9 +12,9 @@ public class SlowpokeCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.CARROT_ON_A_STICK,
                 "&bSlowpoke Charm",
-                Arrays.asList("&aLet's just hope it doesn't hit", "&aitself in its confusion..."));
+                new ArrayList<>(List.of("&aLet's just hope it doesn't hit", "&aitself in its confusion...")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("SLOW,0,self,onHit", "CONFUSION,0,target,onHit"));
+        setPotionEffects(new ArrayList<>(List.of("SLOW,0,self,onHit", "CONFUSION,0,target,onHit")));
         setDropWeight("1");
     }
 }
