@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class SummonMerchantScrollConfig extends CustomItemsConfigFields {
@@ -12,7 +12,7 @@ public class SummonMerchantScrollConfig extends CustomItemsConfigFields {
                 true,
                 Material.PAPER,
                 "&6Summon Merchant Scroll",
-                Arrays.asList("&aNeed to sell an item?", "&aRight-click to activate", "&aor yell &9Jeeves!"));
+                new ArrayList<>(List.of("&aNeed to sell an item?", "&aRight-click to activate", "&aor yell &9Jeeves!")));
         setEnchantments(List.of("SUMMON_MERCHANT,1"));
         setDropWeight("5");
     }
