@@ -2,7 +2,7 @@ package com.magmaguy.elitemobs.config.customquests.premade;
 
 import com.magmaguy.elitemobs.config.customquests.CustomQuestsConfigFields;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
@@ -11,7 +11,7 @@ public class XmasQuest0Config extends CustomQuestsConfigFields {
         super("xmas_quest_0",
                 true,
                 Map.of("Objective1", Map.of("objectiveType", "FETCH_ITEM", "filename", "xmas_lost_present.yml", "amount", 10, "itemName", "Lost Present")),
-                Arrays.asList(
+                new ArrayList<>(List.of(
                         "filename=xmas_treat.yml:amount=10:chance=.3",
                         "filename=xmas_treat_v2.yml:amount=1:chance=.3",
                         "filename=xmas_and_gold.yml:amount=1:chance=.2",
@@ -24,11 +24,11 @@ public class XmasQuest0Config extends CustomQuestsConfigFields {
                         "currencyAmount=300:amount=1:chance=.3",
                         "currencyAmount=300:amount=1:chance=.3",
                         "currencyAmount=300:amount=1:chance=.3"
-                ),
+                )),
                 10,
                 "&2Find the lost gifts!",
-                Arrays.asList("I seem to have lost some Christmas gifts along the way, would you help a poor old man find them again?",
-                        "I will let you open one of them in return!"));
+                new ArrayList<>(List.of("I seem to have lost some Christmas gifts along the way, would you help a poor old man find them again?",
+                        "I will let you open one of them in return!")));
         super.setQuestAcceptDialog(List.of("&8[&cSaint Nick&8]&f Thank you! I will be waiting here for you!"));
         super.setQuestCompleteDialog(List.of("&8[&cSaint Nick&8]&f Thank you for your help! " +
                 "There are still some lost gifts out there, talk to me again if you want to help out more!"));
