@@ -7,7 +7,7 @@ import com.magmaguy.elitemobs.utils.ItemStackSerializer;
 import com.magmaguy.magmacore.util.ItemStackGenerator;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ProceduralShopMenuConfig extends MenusConfigFields {
@@ -33,9 +33,9 @@ public class ProceduralShopMenuConfig extends MenusConfigFields {
                 fileConfiguration);
         rerollItem = ItemStackSerializer.deserialize("Reroll button", fileConfiguration);
         rerollSlot = ConfigurationEngine.setInt(fileConfiguration, "Reroll button slot", 4);
-        storeSlots = ConfigurationEngine.setList(file, fileConfiguration, "Store item slots", Arrays.asList(9, 10, 11, 12,
+        storeSlots = ConfigurationEngine.setList(file, fileConfiguration, "Store item slots", new ArrayList<>(List.of(9, 10, 11, 12,
                 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38,
-                39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53), false);
+                39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53)), false);
         minTier = ConfigurationEngine.setInt(fileConfiguration, "Minimum store item tier", 0);
         maxTier = ConfigurationEngine.setInt(fileConfiguration, "Maximum store item tier", 5);
         messageFullInventory = ConfigurationEngine.setString(file, fileConfiguration, "Full inventory message",
