@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class EliteGoatConfig extends MobPropertiesConfigFields {
     public EliteGoatConfig() {
@@ -11,10 +12,10 @@ public class EliteGoatConfig extends MobPropertiesConfigFields {
                 EntityType.GOAT,
                 true,
                 "&fLvl &2$level &fElite &5Goat",
-                Arrays.asList("$player &cwas rammed by $entity&c!",
+                new ArrayList<>(List.of("$player &cwas rammed by $entity&c!",
                         "$player &cwas run over by $entity&c!",
                         "$player &cwas trampled by $entity&c!",
-                        "$player &cgot $entity&c horns!"),
+                        "$player &cgot $entity&c horns!")),
                 3);
     }
 }
