@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class ElitePiglinBruteConfig extends MobPropertiesConfigFields {
     public ElitePiglinBruteConfig() {
@@ -11,8 +12,8 @@ public class ElitePiglinBruteConfig extends MobPropertiesConfigFields {
                 EntityType.PIGLIN_BRUTE,
                 true,
                 "&fLvl &2$level &fElite &cPiglin Brute",
-                Arrays.asList("$entity &ctenderized $player!",
-                        "$entity &cbrutalized $player!"),
+                new ArrayList<>(List.of("$entity &ctenderized $player!",
+                        "$entity &cbrutalized $player!")),
                 19.5);
     }
 }
